--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,7 +12,7 @@
 
   <!-- SwarpJs -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="/assets/styles/swiper-bundle.min.css">
 
 
   <!-- Google Fonts -->
