--- a/src/views/index.html
+++ b/src/views/index.html
@@ -28,10 +28,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 
   <!-- Estilos -->
-  <link rel="stylesheet" href="/assets/styles/styles.css" />
+  <link rel="stylesheet" href=".../assets/styles/style.css" />
 
   <!-- Scripts -->
-  <script src="/assets/scripts/scripts.js" defer></script>
+  <script src=".../assets/scripts/script" defer></script>
 </head>
 
 
@@ -669,8 +669,8 @@
     <img src="/img/whatsapp.png" alt="WhatsApp"
       style="width: 100px; height: 100px; position: fixed; bottom: 70px; right: 20px;" class="wap">
   </a>
-  <script src="js/swiper-bundle.min.js"></script>
-  <script src="js/scriptcs.js"></script>
+  <script src=".../assets/styles/swiper-bundle.min.js"></script>
+  <script src=".../assets/scripts/scriptSwiper.js"></script>
 
 
 
