--- a/src/views/register.html
+++ b/src/views/register.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="/assets/styles/style-cad.css">
+    <link rel="stylesheet" href=".../assets/styles/style-cad.css">
 </head>
 
 <body>
