Finishing project organization

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dedetizadora|Home</title>
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 
@@ -28,10 +28,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 
   <!-- Estilos -->
-  <link rel="stylesheet" href=".../assets/styles/style.css" />
+  <link rel="stylesheet" href="http://localhost/Dedetizadora/assets/styles/styles.css" />
+
 
   <!-- Scripts -->
-  <script src=".../assets/scripts/script" defer></script>
+  <script src="../../assets/scripts/script" defer></script>
 </head>
 
 
@@ -115,7 +116,7 @@
 
   <!-- Sobre Atendimento -->
   <main id="expertise-areas" class="text-image-section">
-    <div id="expertise-information" class="text-container" style="background-image: url('.//img/saiba-mais.png');">
+    <div id="expertise-information" class="text-container" style="background-image: url('../../img/saiba-mais.png');">
       <p class="section-subtitlee" style="font-size: 60px;"> Nossos Serviços</p>
 
       <h3 class="section-title">
@@ -137,11 +138,11 @@
 
     <div id="expertise-image-container" class="image-container">
 
-      <img src="/img/logo.png" alt="Brasali Logo" />
+      <img src="../../img/logo.png" alt="Brasali Logo" />
     </div>
     <div id="other-services">
       <div class="service">
-        <img src="/img/imagem_dede.jpeg" alt="Banco" />
+        <img src="../../img/imagem_dede.jpeg" alt="Banco" />
         <i class="bi bi-bank"></i>
         <div class="service-info">
           <h4>CONFIANÇA</h4>
@@ -154,7 +155,7 @@
         </div>
       </div>
       <div class="service">
-        <img src="/img/imagem_dede2.jpeg" alt="Construção" />
+        <img src="../../img/imagem_dede2.jpeg" alt="Construção" />
         <i class="bi bi-bricks"></i>
         <div class="service-info">
           <h4>SEGURANÇA</h4>
@@ -167,7 +168,7 @@
         </div>
       </div>
       <div class="service">
-        <img src="/img/imagem_dede3.jpeg" alt="Empresa" />
+        <img src="../../img/imagem_dede3.jpeg" alt="Empresa" />
         <i class="bi bi-building"></i>
         <div class="service-info">
           <h4>GARANTIA</h4>
@@ -186,7 +187,7 @@
 
   <section class="meioambiente">
     <div>
-      <img src="/img/banner-leaves.jpg" alt="Imagem do Meio Ambiente">
+      <img src="../../img/banner-leaves.jpg" alt="Imagem do Meio Ambiente">
     </div>
   </section>
   <!-- Sobre nós -->
@@ -389,7 +390,7 @@
   <!-- Contato -->
   <section id="contact" class="text-image-section">
     <div id="contact-image-container" class="image-container">
-      <img src="/img/recep.jpg" alt="Imagem de Contato">
+      <img src="../../img/recep.jpg" alt="Imagem de Contato">
     </div>
     <div id="contact-information" class="text-containerr">
       <i class="bi bi-envelope"></i>
@@ -593,7 +594,7 @@
   <!-- image Flowers -->
   <section>
     <div>
-      <img src="/img/flowers.jpg" alt="Imagem do Meio Ambiente">
+      <img src="../../img/flowers.jpg" alt="Imagem do Meio Ambiente">
     </div>
   </section>
 
@@ -666,11 +667,12 @@
   </footer>
 
   <a href="https://wa.me/5561999032188" target="_blank">
-    <img src="/img/whatsapp.png" alt="WhatsApp"
+    <img src="../../img/whatsapp.png" alt="WhatsApp"
       style="width: 100px; height: 100px; position: fixed; bottom: 70px; right: 20px;" class="wap">
   </a>
-  <script src=".../assets/styles/swiper-bundle.min.js"></script>
-  <script src=".../assets/scripts/scriptSwiper.js"></script>
+  <script src="../../assets/styles/swiper-bundle.min.js"></script>
+  <script src="../../assets/scripts/scriptSwiper.js"></script>
+  
 
 
 
