--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,6 +13,9 @@
   <!-- SwarpJs -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="/assets/styles/swiper-bundle.min.css">
+  <script src="../../assets/styles/swiper-bundle.min.js" defer></script>
+  <script src="../../assets/scripts/scriptSwiper.js" defer></script>
+
 
 
   <!-- Google Fonts -->
@@ -32,7 +35,8 @@
 
 
   <!-- Scripts -->
-  <script src="../../assets/scripts/script" defer></script>
+  <script src="../../assets/scripts/script.js"></script>
+
 </head>
 
 
@@ -670,12 +674,8 @@
     <img src="../../img/whatsapp.png" alt="WhatsApp"
       style="width: 100px; height: 100px; position: fixed; bottom: 70px; right: 20px;" class="wap">
   </a>
-  <script src="../../assets/styles/swiper-bundle.min.js"></script>
-  <script src="../../assets/scripts/scriptSwiper.js"></script>
-  
-
-
-
+  <script src="http://localhost/Dedetizadora/assets/styles/swiper-bundle.min.js"></script>
+  <script src="http://localhost/Dedetizadora/assets/scripts/scriptSwiper.js"></script>
 
 </body>
 
